--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,14 +5,28 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+			- git config --global credential.helper '!aws codecommit credential-helper $@' \
+        && git config --global credential.UseHttpPath true
   build:
     commands:
       - echo Build started on `date`
-      - echo Building the Docker image...          
+      - DATE=$(date '+%Y%m%d')
+      - echo Building the Docker image...
       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
-      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG      
-  post_build:
-    commands:
+      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG$DATE
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG$DATE
+  post_build:
+    commands:
+      - OPS_REPO_NAME=cicd-argo-test
+      - echo Build completed on $DATE
+      - git clone https://github.com/lim-jeongmin/cicd-argo-test.git
+      - cd $OPS_REPO_NAME
+      - sed "s|image: .*|image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG$DATE|" team-test.yaml > tmpfile && mv tmpfile team-test.yaml
+			- git config --global user.email $GIT_USER_EMAIL \
+        && git config --global user.name $GIT_USER_NAME
+      - git add .
+      - git commit -m "update image tag $DATE"
+      - git push
+
