--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,10 +19,9 @@ phases:
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG$DATE
   post_build:
     commands:
-      - OPS_REPO_NAME=cicd-argo-test
       - echo Build completed on $DATE
       - git clone https://github.com/lim-jeongmin/cicd-argo-test.git
-      - cd $OPS_REPO_NAME
+      - cd cicd-argo-test
       - sed "s|image: .*|image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG$DATE|" team-test.yaml > tmpfile && mv tmpfile team-test.yaml
       - git config --global user.email $GIT_USER_EMAIL \
         && git config --global user.name $GIT_USER_NAME
