--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,10 +20,10 @@ phases:
   post_build:
     commands:
       - echo Build completed on $DATE
-      - git clone https://github.com/lim-jeongmin/cicd-argo-test.git
-      - cd cicd-argo-test
-      - sed "s|image: .*|image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG$DATE|" team-test.yaml > tmpfile && mv tmpfile team-test.yaml
-      - git config --global user.email $GIT_USER_EMAIL \
+      - git clone https://github.com/lim-jeongmin/cicd-argo-test.git \
+        && cd cicd-argo-test \
+        && sed "s|image: .*|image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG$DATE|" team-test.yaml > tmpfile && mv tmpfile team-test.yaml \
+        && git config --global user.email $GIT_USER_EMAIL \
         && git config --global user.name $GIT_USER_NAME
       - git add .
       - git commit -m "update image tag $DATE"
