--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,8 +21,7 @@ phases:
     commands:
       - echo Build completed on $DATE
       - echo pipeline test 
-      - git clone https://github.com/lim-jeongmin/cicd-argo-test.git \
-        && cd cicd-argo-test \
+      - git clone https://github.com/lim-jeongmin/cicd-argo-test.git && cd cicd-argo-test \
         && sed "s|image: .*|image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG$DATE|" team-test.yaml > tmpfile && mv tmpfile team-test.yaml \
         && git config --global user.email $GIT_USER_EMAIL \
         && git config --global user.name $GIT_USER_NAME
