--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,31 +1,31 @@
 version: 0.2
-
+env:
+  shell: bash
 phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
-      - git config --global credential.helper '!aws codecommit credential-helper $@' \
-        && git config --global credential.UseHttpPath true
   build:
     commands:
       - echo Build started on `date`
       - DATE=$(date '+%Y%m%d')
-      - echo Building the Docker image...
+      - echo Building the Docker image...          
       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG$DATE
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG$DATE
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG$DATE  
   post_build:
     commands:
-      - echo Build completed on $DATE
-      - echo pipeline test 
-      - git clone https://github.com/lim-jeongmin/cicd-argo-test.git && cd cicd-argo-test \
-        && sed "s|image: .*|image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG$DATE|" team-test.yaml > tmpfile && mv tmpfile team-test.yaml \
-        && git config --global user.email $GIT_USER_EMAIL \
-        && git config --global user.name $GIT_USER_NAME
+      - echo Build completed on $DATE 
+      - git clone https://github.com/lim-jeongmin/cicd-argo-test.git
+      - cd $OPS_REPO_NAME 
+      - sed "s|image: .*|image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG$DATE|" deployment.yaml > tmpfile && mv tmpfile deployment.yaml 
+      - git config user.email $GIT_USER_EMAIL \
+        && git config user.name $GIT_USER_NAME
+      - git remote set-url origin "https://${GITHUB_ACCESS_TOKEN}@github.com/${GITHUB_REPO_OWNER}/${OPS_REPO_NAME}.git"
       - git add .
-      - git commit -m "update image tag $DATE"
-      - git push
-
+      - git commit -m "update image tag $DATE" 
+      - git push  
+      - echo "code pushed"
